test/errors/func4.ls

#OUTPUT
#Syntax Error: Invalid or missing function argument type.
# -> [12] func add_two(x:int, y:)
#
#END

#RET 1

extern func printf(s:str, ...)

func add_two(x:int, y:)
    x = x + y
end

func main -> int
    return 0
end

